WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47315
r69181
breaks compilation of WebCore/platform/graphics/filters/FETile.cpp if ENABLE(SVG) is false.
https://bugs.webkit.org/show_bug.cgi?id=47315
Summary
r69181 breaks compilation of WebCore/platform/graphics/filters/FETile.cpp if ...
Albert J. Wong
Reported
2010-10-06 16:39:10 PDT
In
http://trac.webkit.org/changeset/69181
, a reference to SVGImageBufferTools::createImageBuffer was added in FETile::apply(). The problem is FETile::apply()'s body is not controlled by ENABLE(SVG), while the declaration of the namespace and functions in SVGImageBufferTools are. Thus, for builds that have ENABLE(SVG) disabled, this results in a compile error.
Attachments
Disable FETime::apply()'s implement if ENABLE(SVG) is false.
(1.60 KB, patch)
2010-10-06 16:44 PDT
,
Albert J. Wong
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Albert J. Wong
Comment 1
2010-10-06 16:40:06 PDT
Current workaround is to add #if ENABLE(SVG) around the body of FETile::apply() until a better fix can be made. This should fix compilation in the mean time, and the function doesn't work as is anyways.
Albert J. Wong
Comment 2
2010-10-06 16:44:58 PDT
Created
attachment 70010
[details]
Disable FETime::apply()'s implement if ENABLE(SVG) is false.
Andreas Kling
Comment 3
2010-10-06 16:47:04 PDT
Comment on
attachment 70010
[details]
Disable FETime::apply()'s implement if ENABLE(SVG) is false. Yuck, but r=me :]
Nikolas Zimmermann
Comment 4
2010-10-06 23:53:38 PDT
Ouch, it's even a layering violation that we're using SVGImageBufferTools from platform/graphics/filters! I'm going to have a look at that today.
Dirk Schulze
Comment 5
2010-10-07 00:09:22 PDT
(In reply to
comment #4
)
> Ouch, it's even a layering violation that we're using SVGImageBufferTools from platform/graphics/filters! > I'm going to have a look at that today.
Right forgot this too! Maybe we can make some parts more generic in SVGImageBufferTools SVGImageBufferTools::createImageBuffer(tileRect, tileRect, tileImage, DeviceRGB) is not SVG specific IIRC.
Eric Seidel (no email)
Comment 6
2010-12-14 01:54:23 PST
What's the status here?
Eric Seidel (no email)
Comment 7
2010-12-20 22:52:13 PST
r69255
. Please use webkit-patch land to land changes so that bugs are closed after landing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug