r69181 breaks compilation of WebCore/platform/graphics/filters/FETile.cpp if ENABLE(SVG) is false. https://bugs.webkit.org/show_bug.cgi?id=47315

Reviewed by Andreas Kling.

Compile fix. No tests.

* platform/graphics/filters/FETile.cpp:
(WebCore::FETile::apply):

git-svn-id: svn://svn.chromium.org/blink/trunk@69255 bbb929c8-8fbe-4397-9dbb-9b2b20218538