third_party/WebKit/WebCore/platform/graphics/filters/FETile.cpp
@@ -52,6 +52,8 @@ FloatRect FETile::determineFilterPrimitiveSubregion(Filter* filter)
 
 void FETile::apply(Filter* filter)
 {
+// FIXME: See bug 47315. This is a hack to work around a compile failure, but is incorrect behavior otherwise.
+#if ENABLE(SVG)
     FilterEffect* in = inputEffect(0);
     in->apply(filter);
     if (!in->resultImage())
@@ -88,6 +90,7 @@ void FETile::apply(Filter* filter)
     pattern->setPatternSpaceTransform(patternTransform);
     filterContext->setFillPattern(pattern);
     filterContext->fillRect(FloatRect(FloatPoint(), absolutePaintRect().size()));
+#endif
 }
 
 void FETile::dump()
@@ -108,4 +111,3 @@ TextStream& FETile::externalRepresentation(TextStream& ts, int indent) const
 } // namespace WebCore
 
 #endif // ENABLE(FILTERS)
-
